:pencil2: Fix: Collections.toList() 에서 toList()로 메서드 변경